--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,22 @@
 name: agileoutgoingpredict
 services:
+  db:
+     image: postgres:16.1-alpine3.19
+     restart: always
+     volumes:
+       - /Volumes/Backup3/Docker/agileoutgoingpredict/postgres/pgdata:/var/lib/postgresql/data
+     environment:
+       - POSTGRES_DB=postgres
+       - POSTGRES_USER=postgres
+       - PGUSER=postgres
+       - POSTGRES_PASSWORD=postgres
+     expose:
+       - 5432
+     healthcheck:
+       test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+       interval: 10s
+       timeout: 5s
+       retries: 5
   web:
     build: .
     ports:
@@ -14,7 +31,7 @@ services:
       - /Volumes/Backup3/Docker/agileoutgoingpredict/static_volume:/code/static
     labels:
       ofelia.enabled: "true"
-      ofelia.job-exec.app-update.schedule: "15 00,02,04,06,08,10,11,12,14,16,20,22 * * *"
+      ofelia.job-exec.app-update.schedule: "@every 2h"
       ofelia.job-exec.app-update.command: "python manage.py update"
       ofelia.job-exec.app-update.user: "root"
 
@@ -26,20 +43,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
-  db:
-     image: postgres:16.1-alpine3.19
-     restart: always
-     volumes:
-       - /Volumes/Backup3/Docker/agileoutgoingpredict/postgres:/var/lib/postgresql/data
-     environment:
-       - POSTGRES_DB=postgres
-       - POSTGRES_USER=postgres
-       - PGUSER=postgres
-       - POSTGRES_PASSWORD=postgres
-     expose:
-       - 5432
-     healthcheck:
-       test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
-       interval: 10s
-       timeout: 5s
-       retries: 5
+
